tests/baselines/reference/parserShorthandPropertyAssignment3.errors.txt
parserShorthandPropertyAssignment3.ts(1,14): error TS1005: ':' expected.


==== parserShorthandPropertyAssignment3.ts (1 errors) ====
    var v = { "" };
                 ~
!!! error TS1005: ':' expected.